# glassfx

./: .gitignore  CMakeLists.txt  README.md  hyprpm.toml
shaders/effects/: bloom.frag  chromatic_aberration.frag  crt.frag  desaturate.frag  film_grain.frag  fluid_sim.frag  heat_shimmer.frag  liquid_glass.frag  pixelate.frag  reaction_diffusion.frag  vignette.frag
src/: Config.cpp  Config.hpp  Dispatchers.cpp  Dispatchers.hpp  FullscreenPass.cpp  FullscreenPass.hpp  ShaderManager.cpp  ShaderManager.hpp  ShaderSystem.cpp  ShaderSystem.hpp  TransformerCompat.cpp  WindowTransformer.cpp  WindowTransformer.hpp  main.cpp
src/qs/: GlassFXItem.cpp  GlassFXItem.hpp  GlassFXRenderer.cpp  GlassFXRenderer.hpp  ScreenCapture.cpp  ScreenCapture.hpp  plugin.cpp
